Exposing best node
